# cherrybomb

./: .gitignore  ACCEPTABLE_USE.md  LEGAL.md  LICENSE  README.md  TODO.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-release.yml  canary.yml  smoke-test.yml
app/: CMakeLists.txt
app/src/: main.cpp
application/: README.md
backend/: README.md
docs/: README.md  _coverpage.md  _sidebar.md  contributing.md  getting-started.md  index.html
docs/api/: analysis.md  authentication.md  content-management.md  data-collection.md  prediction.md
docs/architecture/: architectural-decisions.md  class-diagrams.md  data-flow.md  er-diagrams.md  sequence-diagrams.md  system-overview.md
docs/assets/: CherryBomb_Logo.ai  CherryBomb_Logo.psd
docs/backend/: overview.md  services.md
docs/core-concepts/: concept-a.md  concept-b.md  content-strategy.md  data-collection.md  dataset-management.md  machine-learning-models.md  prediction-models.md  trend-analysis.md
docs/frontend/: account-management.md  components.md  content-calendar.md  dashboard.md  data-visualization.md  overview.md
frontend/: README.md  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json
frontend/src/renderer/src/assets/: main.css
frontend/src/renderer/src/components/: Dashboard.vue  FloatingWindow.vue  GridOverlay.vue  Header.vue  Sidebar.vue
packaging/: README.md
scripts/: dev-gui.md
spikes/: README.md  gate_a_dataviz.py  gate_b_antibot.py  gate_c_packaging.py
src/cherrybomb/: __init__.py  settings.py
src/cherrybomb/gui/: app.py  disclaimer.py
src/cherrybomb_engine/: __init__.py  __main__.py  models.py  paths.py  registry.py
src/cherrybomb_engine/adapters/: __init__.py  reddit.py
src/cherrybomb_engine/net/: __init__.py  ratelimit.py  safety.py
tests/: test_ratelimit.py  test_registry.py  test_safety.py
